<resources>
    <string name="app_name">Mobilization2016</string>

    <string name="toolbar_title">Artists</string>

    <string name="tv_albums_and_tracks">Albums and tracks</string>
    <string name="tv_genres">Genres</string>
    <string name="tv_name">Name</string>

    <string name="tv_biography">biography text</string>
    <string name="tv_biography_title">Biography</string>

    <plurals name="albums">
        <item quantity="one">%d album</item>
        <item quantity="other">%d albums</item>
    </plurals>

    <plurals name="tracks">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>

</resources>
