<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">


    <ImageView
        android:id="@+id/iv_artist_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@color/image_placeholder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_name"
        android:id="@+id/tv_name"
        android:layout_margin="10dp"
        android:layout_alignTop="@+id/iv_artist_photo"
        android:layout_toRightOf="@+id/iv_artist_photo"
        android:layout_toEndOf="@+id/iv_artist_photo"
        android:textColor="@color/text_medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tv_genres"
        android:id="@+id/tv_genres"
        android:layout_below="@+id/tv_name"
        android:layout_alignLeft="@+id/tv_name"
        android:layout_alignStart="@+id/tv_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tv_albums_and_tracks"
        android:id="@+id/tv_albums_and_tracks"
        android:layout_alignBottom="@+id/iv_artist_photo"
        android:layout_alignLeft="@+id/tv_genres"
        android:layout_alignStart="@+id/tv_genres" />


</RelativeLayout>
